--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -336,7 +336,16 @@ $tracker-default-colors-map: (
     color:                      $white
   )
 ) !default;
-$tracker-custom-colors-map:     () !default;
+$tracker-custom-colors-map:     (
+  1: (
+    background:             $brand-success,
+    color:                  $brand-text
+  ),
+  3: (
+    background:             $brand-danger,
+    color:                  $brand-text
+  ),
+) !default;
 $tracker-colors-map:            map-merge($tracker-default-colors-map, $tracker-custom-colors-map);
 
 
