Prefix für Tickets

--- a/src/sass/components/_list.scss
+++ b/src/sass/components/_list.scss
@@ -442,8 +442,8 @@ tr.entry {
     padding: $tracker-list-padding;
 
     &::before {
-      content: "#";
       color: mix($tracker-default-text, $tracker-default-bg, 50%);
+      content: "RM# ";
     }
   }
 
