CSS Anpassen für mobile Ansicht. https://www.ldc-ticket.org/issues/3156

--- a/src/sass/components/_responsive.scss
+++ b/src/sass/components/_responsive.scss
@@ -53,6 +53,7 @@
           font-size: $font-size-large;
           font-weight: $font-weight-normal;
           line-height: $responsive-header-height;
+          font-size: 1.4em;
 
           &::before {
             @include fa-icon;
