Systemproblem: Checkbox Thematik Audio - https://www.ldc-ticket.org/issues/3080

--- a/src/sass/components/_responsive.scss
+++ b/src/sass/components/_responsive.scss
@@ -334,6 +334,13 @@
       }
     }
 
+    // tm http://localhost:8080/issues/3441
+    .tabular {
+      label {
+        float: left;
+      }
+    }
+
     #issue-changesets {
       div.changeset {
         padding: 0;
