--- a/src/sass/customs/_wikiButtons.scss
+++ b/src/sass/customs/_wikiButtons.scss
@@ -86,4 +86,11 @@
     @include button-variant(#54002e, $color, darken($color, 80%));
     @include no_decoration();
   }
+
+  &-orange {
+    $color: #ce6a31;
+    @extend .wiki-class-button;
+    @include button-variant(#fff, $color, darken($color, 80%));
+    @include no_decoration();
+  }
 }
