BugFix wegen Ticket #10197

--- a/src/sass/customs/_allgemein.scss
+++ b/src/sass/customs/_allgemein.scss
@@ -1,7 +1,10 @@
 //Ticket: CSS Checklisten korrigieren #10063
-.tabular label{
-  height: 20px;
-}
+//
+// Rausgenommen wegen: https://www.ldc-ticket.org/issues/10197
+//
+//.tabular label{
+//  height: 20px;
+//}
 
 //Ticket: CSS Textboxen korrigieren #10064
 .text_cf {
