--- a/src/sass/mixins/_issues.scss
+++ b/src/sass/mixins/_issues.scss
@@ -1,3 +1,49 @@
+// Priority highlight
+
+@mixin priority($parent, $background, $color, $link) {
+  @if lightness($background) < 85% {
+    $background: lighten($background, 6%);
+  }
+
+  $border-color: darken(desaturate($background, 30%), 13.5%);
+
+  table.list:not(.odd-even) tbody tr#{$parent} {
+    @if $table-list-color-odd-rows {
+      &:nth-child(odd) {
+        background: darken($background, $table-accent-factor * 100%);
+      }
+    }
+
+    @if $table-list-color-even-rows {
+      &:nth-child(even) {
+        background: darken($background, $table-accent-factor * 100%);
+      }
+    }
+  }
+
+  tr#{$parent} {
+    background: $background;
+
+    @if ".priority-default" == $parent {
+      color: $color;
+    } @else {
+      color: darken($color, 10%);
+    }
+
+    td {
+      border-color: $border-color;
+    }
+
+    a {
+      color: $link;
+
+      &:hover {
+        color: darken($link, 10%);
+      }
+    }
+  }
+}
+
 // Priority icon
 
 @mixin priority-icon-base() {
