Ticket: #10412 Hervorheben nächster schritt im Edit Bereich

--- a/src/sass/customs/_allgemein.scss
+++ b/src/sass/customs/_allgemein.scss
@@ -10,3 +10,10 @@
 .text_cf {
   height: 100px;
 }
+
+//Ticket: #10412 Hervorheben nächster schritt
+.highlightNextStep,
+.issue.details .attributes .cf_161 {
+  background-color: #9b89cc2b;
+  border-radius: 4px;
+}
